# smale7

./: .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml
notebooks/: play.ipynb  plots.ipynb  training.ipynb
src/smale7/utils/: visualization.py
src/utils/: visualization.py
