[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thomson"
version = "0.1.0"
description = "Thomson Problem"
authors = [
    { name = "Tim-Henrik Buelles", email = "thbuelles@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "torch",
    "numpy",
    "matplotlib"
]
