[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smale7"
version = "0.1.0"
description = "Smale's 7th Problem"
authors = [
    { name = "Tim-Henrik Buelles", email = "thbuelles@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "torch",
    "numpy",
    "matplotlib"
]
